--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -26,7 +26,7 @@ window#waybar {
 }
 #workspaces button:hover {
     background-color: @bg;
-    color: @fg;
+    color: @blue;
 }
 #workspaces button.focused {
     background-color: @bg2;
@@ -46,6 +46,7 @@ window#waybar {
     background-color: @fg;
     padding: 0px 7px;
     margin: 5px 20px;
+    border-bottom: 2px solid @gr;
 }
 
 #cpu {
@@ -78,4 +79,5 @@ window#waybar {
     background-color: @fg;
     padding: 0px 7px;
     margin: 5px 20px;
+    border-bottom: 2px solid @gr;
 }
